feat: optimize code

--- a/src/html/includes/main/tickets.html
+++ b/src/html/includes/main/tickets.html
@@ -39,8 +39,8 @@
                     </div>
                 </div>
                 <div class="tickets-amount__price">
-                    <span class="tickets-amount__price-title">Total €</span>
-                    <span class="tickets-amount__price-value"></span>
+                    <span class="tickets-amount__price-title">Total <span class="tickets-amount__price-value">30</span>€</span>
+
                 </div>
                 <label class="tickets-amount__btn" for="tickets-form-toggler">Buy Now</label>
             </div>
