--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -63,7 +63,6 @@
     display: flex;
     gap: 10px;
     &__list-link {
-        color: var(--palette-primary-text);
         width: 100%;
         display: flex;
         align-items: center;
@@ -89,6 +88,9 @@
         }
         @include media-breakpoint-down(md) {
             font-size: 16px;
+        }
+        &:not(:hover) {
+            color: var(--palette-primary-text);
         }
         &:hover {
             color: var(--palette-tertiary-text);
