--- a/src/scss/sections/header/_header.scss
+++ b/src/scss/sections/header/_header.scss
@@ -75,7 +75,6 @@
             display: flex;
         }
         &__list-link {
-            color: var(--palette-primary-text);
             max-width: 200px;
             width: 100%;
             display: flex;
@@ -91,6 +90,9 @@
             }
             @include media-breakpoint-down(xxl) {
                 padding: 10px 15px;
+            }
+            &:not(:hover) {
+                color: var(--palette-primary-text);
             }
             &:hover {
                 color: var(--palette-tertiary-text);
@@ -108,6 +110,11 @@
     .item-dropdown {
         position: relative;
         margin-left: 20px;
+        &:not(:hover) {
+            .nav-dropdown {
+                transform: scaleY(0);
+            }
+        }
         &:hover {
             .nav-dropdown {
                 transform: scaleY(1);
@@ -116,7 +123,6 @@
     }
     
     .nav-dropdown {
-        transform: scaleY(0);
         position: absolute;
         top: 100%;
         right: 0;
@@ -132,21 +138,27 @@
             display: flex;
             align-items: center;
             border-bottom: 1px solid var(--palette-primary-light);
-            transition-duration: 0.3s;
-            &:hover {
-                background-color: var(--palette-secondary-light);
-            }
-            &:active {
-                filter: contrast(0.5);
-            }
         }
         &__link {
+            width: 100%;
             white-space: nowrap;
             padding: 11px 20px;
             font-family: "Roboto";
             font-weight: 100;
             font-size: 22px;
             color: var(--palette-primary-light);
+            transition-duration: 0.3s;
+            &:not(:hover),
+            &:not(:active) {
+                background-color: transparent;
+            }
+            &:hover {
+                background-color: var(--palette-secondary-light);
+            }
+            &:active {
+                background-color: var(--palette-tertiary-main);
+                color: var(--palette-secondary-text);
+            }
         }
     }
     
@@ -156,6 +168,9 @@
         border: 1px solid white;
         border-radius: 5px;
         transition-duration: 0.3s;
+        &:not(:hover) {
+            background-color: transparent;
+        }
         &:hover {
             background-color: var(--palette-secondary-light);
             box-shadow: 0 0 24px 0 var(--palette-tertiary-text);
