--- a/src/scss/sections/main/_journey.scss
+++ b/src/scss/sections/main/_journey.scss
@@ -1,7 +1,6 @@
 .journey {
     width: 100%;
     height: 100%;
-    &__container {}
     &__title {
         color: var(--palette-tertiary-text);
     }
@@ -61,6 +60,9 @@
         z-index: 1;
         cursor: pointer;
         transition-duration: 0.3s;
+        &:not(:hover) {
+            filter: brightness(1);
+        }
         &:hover {
             filter: brightness(0.7);
         }
@@ -117,6 +119,9 @@
         @include media-breakpoint-down(xl) {
             padding: 5px;
         }
+        &:not(:hover) {
+            filter: brightness(1);
+        }
         &:hover {
             filter: brightness(0.5);
         }
@@ -138,12 +143,10 @@
     &__play-bar {
         min-width: 100px;
     }
-    &__volume-btn {}
     &__volume-bar {
         max-width: 200px;
         min-width: 80px;
     }
-    &__fullscreen-btn {}
 }
 
 .play-icon,
@@ -153,10 +156,6 @@
     height: 100%;
     min-width: 10px;
 }
-
-.volume-icon {}
-
-.fullscreen-icon {}
 
 .journey-slider {
     width: 100%;
@@ -169,14 +168,20 @@
     &__btn-next {
         cursor: pointer;
         padding: 10px;
-        svg {
-            path {
-                fill: var(--palette-primary-dark);
-            }
+        transition-duration: 0.3s;
+        &:not(:hover) {
+            filter: brightness(1);
+        }
+        &:hover {
+            filter: brightness(0.5);
+        }
+        &:not(:active) {
+            transform: scale(1);
+        }
+        &:active {
+            transform: scale(1.2);
         }
     }
-    &__btn-prev {}
-    &__btn-next {}
     &__nav {
         display: flex;
         gap: 20px;
@@ -195,6 +200,11 @@
             height: 12px;
             background-color: var(--palette-tertiary-light);
             border-radius: 50%;
+            cursor: pointer;
+            transition-duration: 0.3s;
+            &:hover {
+                box-shadow: 0 0 5px 0 var(--palette-primary-main);
+            }
         }
         .swiper-pagination-bullet-active {
             background-color: var(--palette-primary-main);
