--- a/src/scss/sections/main/_visiting.scss
+++ b/src/scss/sections/main/_visiting.scss
@@ -8,7 +8,6 @@
             max-width: 1100px;
         }
     }
-    &__title {}
     &__title-text {
         color: var(--palette-tertiary-text);
     }
@@ -47,6 +46,14 @@
         display: flex;
         padding: 5px;
         transition-duration: 0.3s;
+        &:not(:hover) {
+            transform: scale(1);
+            ~.visiting__card-title {
+                &::after {
+                    width: 70%;
+                }
+            }
+        }
         &:hover {
             transform: scale(1.03);
             ~.visiting__card-title {
