--- a/src/scss/sections/header/_header.scss
+++ b/src/scss/sections/header/_header.scss
@@ -32,7 +32,8 @@
             flex: 1 0 auto;
         }
         &__logo-text {
-            font-family: 'Forum', serif;
+            font-family: var(--typography-fontFamily-headings);
+            font-weight: var(--typography-fontWeightMedium);
             text-transform: uppercase;
             letter-spacing: 2px;
             color: var(--palette-primary-text);
@@ -79,8 +80,8 @@
             width: 100%;
             display: flex;
             align-items: center;
-            font-family: "Roboto", sans-serif;
-            font-weight: 100;
+            font-family: var(--typography-fontFamily);
+            font-weight: var(--typography-fontWeightLight);
             font-size: 22px;
             letter-spacing: 2px;
             border-radius: 25px;
@@ -96,7 +97,7 @@
             }
             &:hover {
                 color: var(--palette-tertiary-text);
-                box-shadow: 0 0 24px 0 var(--palette-tertiary-text);
+                box-shadow: var(--shadows-3);
             }
         }
     }
@@ -143,8 +144,8 @@
             width: 100%;
             white-space: nowrap;
             padding: 11px 20px;
-            font-family: "Roboto";
-            font-weight: 100;
+            font-family: var(--typography-fontFamily);
+            font-weight: var(--typography-fontWeightLight);
             font-size: 22px;
             color: var(--palette-primary-light);
             transition-duration: 0.3s;
@@ -173,6 +174,6 @@
         }
         &:hover {
             background-color: var(--palette-secondary-light);
-            box-shadow: 0 0 24px 0 var(--palette-tertiary-text);
+            box-shadow: var(--shadows-3);
         }
     }
