--- a/src/scss/sections/main/_contacts.scss
+++ b/src/scss/sections/main/_contacts.scss
@@ -23,8 +23,8 @@
         max-width: 300px;
     }
     &__text-title {
-        font-family: "Roboto", sans-serif;
-        font-weight: 500;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightMedium);
         color: var(--palette-secondary-tex);
         @include media-breakpoint-up(xl) {
             font-size: 28px;
@@ -75,8 +75,8 @@
     }
     &__item-link {
         display: flex;
-        font-family: "Roboto", sans-serif;
-        font-weight: 300;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         color: var(--palette-secondary-tex);
         white-space: nowrap;
         @include media-breakpoint-up(xl) {
