--- a/src/scss/sections/main/tickets/_form.scss
+++ b/src/scss/sections/main/tickets/_form.scss
@@ -105,8 +105,8 @@
     &__subtitle {
         width: 100%;
         display: flex;
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 18px;
         border-bottom: 3px solid var(--palette-primary-dark);
         color: var(--palette-primary-dark);
@@ -123,8 +123,8 @@
         margin-left: 15px;
         &::placeholder {
             color: var(--palette-primary-main);
-            font-family: "Roboto", sans-serif;
-            font-weight: 400;
+            font-family: var(--typography-fontFamily);
+            font-weight: var(--typography-fontWeightLight);
             font-size: 18px;
         }
     }
@@ -144,8 +144,8 @@
         }
     }
     &__overview-title {
-        font-family: "Roboto", sans-serif;
-        font-weight: 500;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightMedium);
         color: var(--palette-secondary-text);
         @include media-breakpoint-up(sm) {
             font-size: 32px;
@@ -156,8 +156,8 @@
     }
     &__overview-subtitle {
         display: flex;
-        font-family: "Roboto", sans-serif;
-        font-weight: 500;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightMedium);
         color: var(--palette-primary-dark);
         margin-bottom: 10px;
         @include media-breakpoint-up(sm) {
@@ -192,8 +192,8 @@
         max-width: 220px;
         padding: 11px 87px;
         margin-top: 80px;
-        font-family: "Roboto", sans-serif;
-        font-weight: 300;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 22px;
         text-align: center;
         transition-duration: 0.2s;
@@ -212,7 +212,7 @@
         &:hover {
             background-color: var( --palette-secondary-light);
             color: var(--palette-primary-text);
-            box-shadow: 0 0 24px 0 var(--palette-secondary-light);
+            box-shadow: var(--shadows-2);
         }
         &:active {
             background-color: var(--palette-tertiary-main);
@@ -235,8 +235,8 @@
         display: flex;
         flex: 1 0 auto;
         margin-left: 15px;
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 18px;
     }
     &__arrow {
@@ -285,8 +285,8 @@
         display: flex;
         width: 100%;
         border-bottom: 2px solid var(--palette-primary-dark);
-        font-family: "Forum", serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily-headings);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 18px;
         color: var(--palette-tertiary-text);
         padding-bottom: 5px;
@@ -298,8 +298,8 @@
     }
     &__row-text {
         display: flex;
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 18px;
         .tickets-field__text {
             margin-left: 0;
@@ -317,7 +317,7 @@
         height: 25px;
         cursor: pointer;
         &:hover {
-            box-shadow: 0 0 24px 0 var(--palette-secondary-light);
+            box-shadow: var(--shadows-2);
         }
         &:not(:active) {
             background-color: var(--palette-primary-main);
@@ -356,8 +356,8 @@
 
 .overview {
     &__row-text {
-        font-family: "Roboto", sans-serif;
-        font-weight: 300;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         color: var(--palette-secondary-text);
         @include media-breakpoint-up(sm) {
             margin-left: 15px;
@@ -372,8 +372,8 @@
         margin-top: 15px;
         display: flex;
         align-items: center;
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         @include media-breakpoint-up(sm) {
             font-size: 22px;
         }
@@ -384,8 +384,8 @@
     &__total-summ {
         display: flex;
         margin-top: 15px;
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 32px;
     }
     &__cards {
@@ -497,8 +497,8 @@
     &__text-field {
         display: flex;
         flex-direction: column;
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 12px;
         color: var(--palette-primary-main);
     }
