--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -42,8 +42,8 @@
         padding: 11px 20px;
         margin-top: 20px;
         color: var(--palette-primary-text);
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 20px;
         border-radius: 5px;
         transition-duration: 0.3s;
@@ -64,8 +64,8 @@
     }
     &__comment-title {
         color: var(--palette-primary-main);
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 20px;
     }
     &__comment-field {
@@ -113,8 +113,8 @@
         }
     }
     &__center-title {
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 40px;
         color: var(--palette-secondary-text);
     }
@@ -125,8 +125,8 @@
         align-self: center;
         padding: 11px 20px;
         color: var(--palette-primary-text);
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 20px;
         max-width: 400px;
         transition-duration: 0.3s;
@@ -166,15 +166,15 @@
     }
     &__item-text {
         color: var(--palette-secondary-text);
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 20px;
         text-align: center;
     }
     &__item-value {
         color: var(--palette-tertiary-text);
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         font-size: 30px;
         text-align: center;
     }
