--- a/src/scss/sections/header/burger.scss
+++ b/src/scss/sections/header/burger.scss
@@ -134,7 +134,7 @@
         }
         &:hover {
             color: var(--palette-tertiary-text);
-            box-shadow: 0 0 24px 0 var(--palette-tertiary-text);
+            box-shadow: var(--shadows-3);
             .burger-nav__link-arrow {
                 path {
                     fill: var(--palette-secondary-light);
@@ -144,14 +144,13 @@
     }
     &__link-text {
         max-width: 150px;
-        font-family: "Roboto", sans-serif;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         letter-spacing: 2px;
         @include media-breakpoint-up(xl) {
-            font-weight: 100;
             font-size: 22px;
         }
         @include media-breakpoint-down(xl) {
-            font-weight: 300;
             font-size: 20px;
         }
     }
