--- a/src/scss/sections/main/_hero.scss
+++ b/src/scss/sections/main/_hero.scss
@@ -33,8 +33,8 @@
             align-items: center;
             justify-content: center;
             margin-top: 55px;
-            font-family: "Roboto", sans-serif, sans-serif;
-            font-weight: 300;
+            font-family: var(--typography-fontFamily);
+            font-weight: var(--typography-fontWeightLight);
             font-size: 22px;
             letter-spacing: 2px;
             border: none;
@@ -78,8 +78,8 @@
     &__title-desc {
         margin-top: 20px;
         margin-bottom: 20px;
-        font-family: "Roboto", sans-serif;
-        font-weight: 300;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         letter-spacing: 2px;
         color: var(--palette-primary-text);
         @include media-breakpoint-up(xl) {
@@ -173,8 +173,8 @@
         display: flex;
         gap: 5px;
         justify-content: space-between;
-        font-family: "Roboto", sans-serif;
-        font-weight: 400;
+        font-family: var(--typography-fontFamily);
+        font-weight: var(--typography-fontWeightLight);
         color: var(--palette-primary-text);
         @include media-breakpoint-up(xl) {
             font-size: 22px;
