feat: add variables for box shadows

--- a/src/scss/sections/_footer.scss
+++ b/src/scss/sections/_footer.scss
@@ -95,7 +95,7 @@
         }
         &:hover {
             color: var(--palette-tertiary-text);
-            box-shadow: 0 0 24px 0 var(--palette-tertiary-text);
+            box-shadow: var(--shadows-3);
         }
     }
 }
