--- a/src/scss/sections/_user.scss
+++ b/src/scss/sections/_user.scss
@@ -49,7 +49,7 @@
         transition-duration: 0.3s;
         cursor: pointer;
         &:hover {
-            box-shadow: 0 0 24px 0 var(--palette-secondary-light);
+            box-shadow: var(--shadows-2);
         }
         &:not(:active) {
             background-color: var(--palette-primary-main);
@@ -84,7 +84,7 @@
         transition-duration: 0.3s;
         border: none;
         &:hover {
-            box-shadow: 0 0 24px 0 var(--palette-secondary-light);
+            box-shadow: var(--shadows-2);
         }
         &:not(:active) {
             background-color: var(--palette-primary-main);
@@ -138,7 +138,7 @@
             margin-top: 20px;
         }
         &:hover {
-            box-shadow: 0 0 24px 0 var(--palette-secondary-light);
+            box-shadow: var(--shadows-2);
         }
         &:not(:active) {
             background-color: var(--palette-primary-dark);
@@ -161,7 +161,7 @@
         border-radius: 15px;
         transition-duration: 0.3s;
         &:hover {
-            box-shadow: 0 0 24px 0 var(--palette-primary-main);
+            box-shadow: var(--shadows-2);
         }
     }
     &__item-text {
