--- a/src/scss/sections/_admin.scss
+++ b/src/scss/sections/_admin.scss
@@ -6,6 +6,15 @@
 
 .user-list {
     margin-top: 40px;
+    &__container {
+        // &::-webkit-scrollbar {
+        //     width: 0;
+        //     height: 0;
+        // }
+        @include media-breakpoint-down(lg) {
+            overflow: auto;
+        }
+    }
     &__title {
         font-family: var(--typography-fontFamily);
         font-weight: var(--typography-fontWeightLight);
@@ -75,10 +84,17 @@
     }
     &__body {
         display: flex;
-        justify-content: space-between;
-        gap: 20px;
         margin-top: 20px;
-        flex-wrap: wrap;
+        gap: 60px;
+        @include media-breakpoint-up(xl) {
+            justify-content: space-between;
+        }
+        @include media-breakpoint-down(xl) {
+            justify-content: center;
+        }
+        @include media-breakpoint-down(lg) {
+            flex-wrap: wrap;
+        }
     }
     &__price-container {
         display: flex;
