feat: add both sections

--- a/src/html/includes/login.html
+++ b/src/html/includes/login.html
@@ -1,5 +1,23 @@
 <section class="login">
     <div class="login__container section-container">
-        <h1 class="title">Login</h1>
+        <h1 class="login__title title">Login</h1>
+        <form action="" class="login__body">
+            <label class="login__field auth-field" for="username">
+              <svg class="login__field-icon" width="20" height="20" viewBox="0 0 13 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M7.9017 9.45749C7.9017 9.43118 7.91838 9.40973 7.91838 9.38536V7.71004C7.91142 7.66336 7.90132 7.61714 7.88815 7.57165C8.54145 7.19251 9.07974 6.66291 9.45149 6.03359C9.82325 5.40426 10.016 4.69625 10.0114 3.97732C10.0114 1.78058 8.4385 0 6.49976 0C4.56101 0 2.98813 1.77961 2.98813 3.97732C3.00484 4.69886 3.21494 5.40495 3.59918 6.03088C3.98343 6.6568 4.52954 7.18253 5.18746 7.55993C5.1719 7.60906 5.1604 7.65926 5.15306 7.71004V9.3834C5.1558 9.39688 5.15928 9.41023 5.16348 9.42338C2.19283 9.76643 -0.000244141 11.2751 -0.000244141 12.7672C-0.000244141 14.464 2.90891 15 6.49976 15C10.0906 15 12.9998 14.464 12.9998 12.7672C12.9987 11.3131 10.7952 9.84635 7.9017 9.45749Z" fill="#030303"/>
+              </svg>
+            <input class="login__field-data auth-field-data" type="text" placeholder="Username" id="username" autocomplete="off">
+            
+          </label>
+            <label class="login__field auth-field" for="password">
+            <svg class="login__field-icon" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26.31 34.98"><g data-name="Layer 2"><path d="M24.23,13H21.9V8.74a8.75,8.75,0,0,0-17.49,0V13H2.08A2.08,2.08,0,0,0,0,15.12V32.9A2.08,2.08,0,0,0,2.08,35H24.23a2.08,2.08,0,0,0,2.08-2.08V15.12A2.08,2.08,0,0,0,24.23,13ZM7.33,8.74A5.83,5.83,0,1,1,19,8.74V13H7.33ZM23.48,32.15H2.83V15.87H23.48Z" data-name="Layer 1"/></g></svg>
+            <input class="login__field-data auth-field-data" type="password" placeholder="Password" id="password">
+          </label>
+            <div class="login__body-bottom">
+                <button class="login__btn-signin auth-btn" type="submit">Sign in</button>
+                <button class="login__btn-reset auth-btn">Reset</button>
+            </div>
+            <span class="login__undertext-inner auth-undertext-inner">Not on Sign in yet? <a class="login__undertext--link auth-undertext-link" href="register-page.html">Register</a></span>
+        </form>
     </div>
 </section>
