--- a/src/html/templates/register-page.html
+++ b/src/html/templates/register-page.html
@@ -1,4 +1,4 @@
-<% var data = { title: "Profile" } %>
+<% var data = { title: "Register" } %>
     <%= _.template(require('./../includes/_html-top.html').default)(data) %>
         <%= _.template(require('./../includes/header.html').default)(data) %>
             <main class="main">
