--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -31,3 +31,7 @@
 //Admin page
 @import "sections/admin";
 @import "sections/footer";
+//Login page
+@import "sections/login";
+//Register page
+@import "sections/register";
